fix on mobile

--- a/src/frontend/styles/_shared/_mobile.styl
+++ b/src/frontend/styles/_shared/_mobile.styl
@@ -204,10 +204,11 @@ body
         
         .room_cell
           width: 100%
+          max-width: 250px
+          margin: 0 auto 10px
           position: relative!important
           top: 0!important
           left: 0!important
-          margin-bottom: 10px
           
           & > .thumb_wrapper
             width: 100%
